chore: Update settings.json in .vscode folder
- Add "Extname"
- Remove "pylintrc"
- Add "Pylint" and "pylintrc" in separate lines

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,13 @@
         "APPDATA",
         "Cytron",
         "Docstrings",
+        "Extname",
         "Intelli",
         "Micropython",
         "Pico",
         "Pylance",
+        "Pylint",
+        "pylintrc",
         "Pyright",
         "PYTHONPATH",
         "Schafer",
